--- a/static/api/soquest.yaml
+++ b/static/api/soquest.yaml
@@ -50,11 +50,15 @@ info:
   license:
     name: ''
 paths:
-  /livestreams:
+
+# 路由
+  /router-xxx:
     post:
-      summary: Create an independent livestream
+    # 描述
+      summary: 这是一个案例
       requestBody:
         content:
+        # 请求头中的MIME 类型
           application/json:
             schema:
               type: object
@@ -62,11 +66,125 @@ paths:
                 example-1:
                   name: prdmmp-xhycsl-asdf
               properties:
+                # 字段1
                 name:
+                  type: string
+                  # 描述
+                  description: name字段的描述
+                  # 该字段需要满足的规则
+                  pattern: '可添加给用户的字段传值的正则规范'
+                  # nullable 代表返回值有可能为null
+                  nullable: true
+                # 字段2
+                name2:
                   type: string
                   description: Name of the livestream
                   pattern: '^[a-zA-Z0-9-_]*$'
                   nullable: true
+            # 示例
+            examples:
+              example-1:
+                value:
+                  name: prdmmp-xhycsl
+        description: ''
+      parameters: []
+      responses:
+        '201（code状态）':
+          description: 响应成功
+          content:
+            application/json:
+              schema:
+                type: object
+                x-examples: null
+                properties:
+                  success:
+                    type: boolean
+                  data:
+                    type: object
+                    # 请求返回字段的描述，number/string/boolean  number[]/string[]/boolean[]
+                    properties:
+                      status:
+                        type: string
+                        # 枚举
+                        enum:
+                          - LIVE
+                          - IDLE
+                          - ERRORED
+                          - INVOKED
+                      name:
+                        type: string
+                      meeting_id:
+                        type: string
+                        # nullable 代表返回值有可能为null
+                        nullable: true
+                      ingest_server:
+                        type: string
+                        # 描述
+                        description: 可以添加字段描述
+                      id:
+                        type: string
+                        description: The livestream ID.
+                      stream_key:
+                        type: string
+                        description: Unique key for accessing each livestream.
+                      playback_url:
+                        type: string
+                        description: The web address that viewers can use to watch the livestream.
+                      disabled:
+                        type: boolean
+                        x-stoplight:
+                          id: agr64mp2vma62
+                        description: Specifies if the livestream was disabled.
+              # 成功返回的示例
+              examples:
+                example-1:
+                  value:
+                    success: true
+                    data:
+                      status: INVOKED
+                      name: 返回值示例
+                      meeting_id: null
+                      ingest_server: 返回值示例
+                      id: 78dd0b50-4147-4bb8-88d3-2ccc2e98bff0
+                      stream_key: sk_ap-south-1_BSErwBSdrcWn_0eG01cFGCJcRcCsflOAX3Eu4B3RyRX
+                      playback_url: 'https://2ec802dd47b0.ap-south-1.playback.live-video.net/api/video/v1/ap-south-1.944908621410.channel.Jk1l97eJF0ME.m3u8'
+                      disabled: false
+      description: 'Creates a livestream for the given organization ID and returns ingest server, stream key, and playback URL. You can pass custom input to the ingest server and stream key, and freely distribute the content using the playback URL on any player that supports HLS/LHLS.'
+      # 属于那个模块的路由
+      tags:
+        - 自定义模块的路由
+
+# 路由
+  /livestreams:
+    post:
+    # 描述
+      summary: Create an independent livestream
+      requestBody:
+        content:
+        # 请求头中的MIME 类型
+          application/json:
+            schema:
+              type: object
+              x-examples:
+                example-1:
+                  name: prdmmp-xhycsl-asdf
+              properties:
+                # 字段1
+                name:
+                  type: string
+                  # 描述
+                  description: Name of the livestream
+                  # 该字段需要满足的规则
+                  pattern: '^[a-zA-Z0-9-_]*$'
+                  # nullable 代表返回值有可能为null
+                  nullable: true
+                # 字段2
+                name2:
+                  type: string
+                  description: Name of the livestream
+                  pattern: '^[a-zA-Z0-9-_]*$'
+                  nullable: true
+            # 示例
             examples:
               example-1:
                 value:
@@ -86,9 +204,11 @@ paths:
                     type: boolean
                   data:
                     type: object
+                    # 请求返回字段的描述，number/string/boolean  number[]/string[]/boolean[]
                     properties:
                       status:
                         type: string
+                        # 枚举
                         enum:
                           - LIVE
                           - IDLE
@@ -98,9 +218,11 @@ paths:
                         type: string
                       meeting_id:
                         type: string
+                        # nullable 代表返回值有可能为null
                         nullable: true
                       ingest_server:
                         type: string
+                        # 描述
                         description: The server URL to which the RTMP encoder should send the video and audio data.
                       id:
                         type: string
@@ -116,6 +238,7 @@ paths:
                         x-stoplight:
                           id: agr64mp2vma62
                         description: Specifies if the livestream was disabled.
+              # 成功返回的示例
               examples:
                 example-1:
                   value:
@@ -130,6 +253,7 @@ paths:
                       playback_url: 'https://2ec802dd47b0.ap-south-1.playback.live-video.net/api/video/v1/ap-south-1.944908621410.channel.Jk1l97eJF0ME.m3u8'
                       disabled: false
       description: 'Creates a livestream for the given organization ID and returns ingest server, stream key, and playback URL. You can pass custom input to the ingest server and stream key, and freely distribute the content using the playback URL on any player that supports HLS/LHLS.'
+      # 属于那个模块的路由
       tags:
         - Live streams
     get:
@@ -303,6 +427,7 @@ paths:
       description: 'Returns details of livestreams associated with the given organization ID. It includes livestreams created by your organization and Dyte meetings that are livestreamed by your organization. If you only want details of livestreams created by your organization and not Dyte meetings, you can use the `exclude_meetings` query parameter.'
       tags:
         - Live streams
+  # 路由
   '/meetings/{meeting_id}/active-livestream/stop':
     post:
       operationId: stop_livestreaming
